2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Coverage for conditional `else' and `endif' arguments.
	* tests/cond46.test: New test.
	* tests/Makefile.am: Update.

2009-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Simplify Variable::_check_ambiguous_condition.
	* lib/Automake/Variable.pm (_check_ambiguous_condition): No need
	to check for $def since ambiguous_p returns an empty $message if
	there is no other condition which is ambiguous to $cond.

	Coverage for DisjConditions.pm.
	* lib/Automake/tests/DisjConditions.pl (test_basics): Increase
	test coverage: test ->human, ->merge, ->simplify, ->multiply.
	* lib/Automake/tests/DisjConditions-t.pl (test_basics): Likewise
	changes, but including state copies across thread creation.
	* lib/Automake/tests/DisjCon2.pl: New test.
	* lib/Automake/tests/DisjCon3.pl: Likewise.
	* lib/Automake/tests/Makefile.am (TESTS, XFAIL_TESTS): Adjust.

	Coverage and fixes for Condition.pm.
	* lib/Automake/Condition.pm (new): Catch common programming
	errors better by checking type of passed argument before
	munging them to all be strings through split.
	* lib/Automake/tests/Condition.pl (test_basics): Also test
	->human.
	(test_merge): New function, test ->merge, ->merge_conds,
	->strip.
	* lib/Automake/tests/Condition-t.pl (test_basics, test_merge):
	Likewise changes, but including state copies across thread
	creation.
	* lib/Automake/tests/Cond2.pl: New test for programming error.
	* lib/Automake/tests/Cond3.pl: Likewise.
	* lib/Automake/tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

	Coverage for Wrap.pm.
	* lib/Automake/tests/Wrap.pl (@tests): Add test for word with
	trailing space.
	(test_makefile_wrap, @makefile_tests): New function, new list of
	tests, to test makefile_wrap.

	Coverage for Version.pm.
	* lib/Automake/tests/Version.pl (test_version_compare): Also
	try Automake::Version::check for the version pairs, taking into
	account the special-case naming of code forks.
	(@tests): Add more test cases.