@@ -1,5 +1,9 @@
 2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Coverage: diagnose variables with forbidden dist_ prefix.
+	* tests/candist.test: New test.
+	* tests/Makefile.am: Update.
+
 	Coverage for conditional `else' and `endif' arguments.
 	* tests/cond46.test: New test.
 	* tests/Makefile.am: Update.
